snapshot-tests/tests/snapshots/parser__signed_radix__plus_oct.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidInteger]: invalid integer: signs are not allowed on prefixed integers at a
  ┌─ plus_oct:1:5
  │
1 │ a = +0o0
  │     ^^^^ invalid integer: signs are not allowed on prefixed integers
